tests/sumo/pedestrian_model/striping/errors/disconnected_route/fcd.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2025-10-09T21:49:44.221297+01:00 by Eclipse SUMO sumo v1_24_0+1329-e45c39789b9
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
This file may also be made available under the following Secondary
Licenses when the conditions for such availability set forth in the Eclipse
Public License 2.0 are satisfied: GNU General Public License, version 2
or later which is available at
https://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html
SPDX-License-Identifier: EPL-2.0 OR GPL-2.0-or-later
<sumoConfiguration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <fcd-output value="fcd.xml"/>
        <tripinfo-output value="tripinfos.xml"/>
    </output>

    <processing>
        <default.speeddev value="0"/>
        <pedestrian.model value="striping"/>
        <pedestrian.striping.dawdling value="0.0"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

</sumoConfiguration>
-->

<fcd-export xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/fcd_file.xsd">
    <timestep time="0.00">
        <person id="p0" x="109.53" y="78.65" angle="0.00" type="DEFAULT_PEDTYPE" speed="0.00" pos="78.65" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="1.00">
        <person id="p0" x="109.53" y="80.04" angle="0.00" type="DEFAULT_PEDTYPE" speed="1.39" pos="80.04" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="2.00">
        <person id="p0" x="109.53" y="81.43" angle="0.00" type="DEFAULT_PEDTYPE" speed="1.39" pos="81.43" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="3.00">
        <person id="p0" x="109.53" y="82.82" angle="0.00" type="DEFAULT_PEDTYPE" speed="1.39" pos="82.82" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="4.00">
        <person id="p0" x="109.53" y="84.21" angle="0.00" type="DEFAULT_PEDTYPE" speed="1.39" pos="84.21" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="5.00">
        <person id="p0" x="109.53" y="85.59" angle="0.00" type="DEFAULT_PEDTYPE" speed="1.39" pos="85.59" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="6.00">
        <person id="p0" x="109.53" y="86.98" angle="0.00" type="DEFAULT_PEDTYPE" speed="1.39" pos="86.98" edge="SC" slope="0.00"/>
    </timestep>
    <timestep time="7.00">
        <person id="p0" x="109.53" y="88.37" angle="0.00" type="DEFAULT_PEDTYPE" speed="1.39" pos="88.37" edge="SC" slope="0.00"/>
    </timestep>
</fcd-export>
